<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:showIn="@layout/app_bar_main"
    android:background="@drawable/bg_map"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.shaheen.developer.consorstopvpn.MainActivity">
    <!---->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:layout_weight="43">

            <LinearLayout
                android:id="@+id/streaming_layout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/stream_tab_border"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/stream_icon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/streaming_unactive" />

                <TextView
                    android:id="@+id/opt_streaming"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10sp"
                    android:gravity="center"
                    android:text="@string/streaming"
                    android:textColor="@color/black_light"
                    android:fontFamily="@font/mulisemibold"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>
            <View
                android:layout_width="1dp"
                android:layout_height="60dp"
                android:background="@android:color/darker_gray" />
            <LinearLayout
                android:id="@+id/location_layout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/location_tab_border"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/location" />

                <TextView
                    android:id="@+id/opt_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10sp"
                    android:textColor="@color/black_light"
                    android:fontFamily="@font/mulisemibold"
                    android:text="@string/location"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="16"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/secure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:text="@string/not_secured"
                android:fontFamily="@font/mulibold"
                android:textColor="@color/black_light"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Australia"
                android:fontFamily="@font/mulilight"
                android:layout_below="@+id/secure"
                android:textColor="@color/black_lighter"
                android:textSize="17sp" />

            <com.skyfishjy.library.RippleBackground
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/content_main"
                app:rb_color="@color/orange"
                app:rb_radius="32dp"
                app:rb_rippleAmount="4"
                app:rb_duration="3000"
                app:rb_scale="6">
            <com.skyfishjy.library.RippleBackground
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/content"
                app:rb_color="@color/orange"
                app:rb_radius="50dp"
                app:rb_rippleAmount="1"
                app:rb_duration="1500"
                app:rb_scale="6" >

                <ImageView
                    android:id="@+id/connect_image"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/tap_connect" />

                <RelativeLayout
                    android:id="@+id/not_connect_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_below="@+id/connect_image"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tap_to_connect"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/tap_to_connect"
                        android:textColor="@color/black_lighter"
                        android:fontFamily="@font/mulilight"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/connect_to"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_gravity="bottom"
                        android:gravity="center"
                        android:text="@string/connect_to"
                        android:fontFamily="@font/mulilight"
                        android:textColor="@color/black_light"
                        android:textSize="17sp" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/connected_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_below="@+id/connect_image">

                    <com.eyalbira.loadingdots.LoadingDots
                        android:id="@+id/dots"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:LoadingDots_auto_play="true"
                        app:LoadingDots_dots_color="@color/black"
                        app:LoadingDots_dots_count="6"
                        app:LoadingDots_dots_size="8dp"
                        app:LoadingDots_dots_space="6dp"
                        app:LoadingDots_loop_duration="800"
                        app:LoadingDots_loop_start_delay="100"
                        app:LoadingDots_jump_duration="200"
                        android:gravity="center"
                        app:LoadingDots_jump_height="8dp"/>

                    <Chronometer
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:fontFamily="@font/mulisemibold"
                        android:id="@+id/connect_time" />

                    <TextView
                        android:id="@+id/connect_status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:layout_gravity="bottom"
                        android:text="@string/connected"
                        android:fontFamily="@font/mulisemibold"
                        android:textColor="@color/black_light"
                        android:textSize="18sp" />


                </LinearLayout>

            </com.skyfishjy.library.RippleBackground>
            </com.skyfishjy.library.RippleBackground>


        </RelativeLayout>


        <LinearLayout
            android:id="@+id/connected_countryLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="41">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/connectedIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/location" />

                <TextView
                    android:id="@+id/connectedName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_country_channel"
                    android:fontFamily="@font/mulibold"
                    android:textColor="@color/black"
                    android:textSize="23dp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/dropdown" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>



</RelativeLayout>
